# WhyOpenGL

./: CMakeLists.txt  README.md
src/: Application.cpp  CMakeLists.txt  GLUtil.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/tests/: Test.cpp  Test.h  TestBatchRender.cpp  TestBatchRender.h  TestClearColor.cpp  TestTexture2D.cpp  TestTexture2D.h
